--- a/StateMachine.xaml
+++ b/StateMachine.xaml
@@ -9,7 +9,7 @@
         </State>
         <State Layout="Common" Name="SystemRoot" Owner="All">
             <State.Events>
-                <!-- MOD START -->
+                <!-- MOD START - Removes story message -->
                 <!--<Event Name = "OpenSystemMessageBox"><Event.Actions><AddSubstate Name="SystemMessageBox"/></Event.Actions></Event>-->
                 <!-- MOD END -->
                 <Event Name="GE.EditorMode">
