--- a/Widgets/Dialogue.xaml
+++ b/Widgets/Dialogue.xaml
@@ -196,7 +196,7 @@
             </StackPanel>
         </StackPanel>
 
-            <!-- MOD START -->
+            <!-- MOD START - Remove early access text from dialogues -->
         <!-- TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
             <Run Text="{Binding Source='h8be1f0ddgdfa7g4812ga2b5g04854b2a1a65', Converter={StaticResource TranslatedStringConverter}, ConverterParameter='ToUpper'}"/>
             <Run Text=" - "/>
