patch4changes: Added missing block brackets.

--- a/Widgets/Dialogue.xaml
+++ b/Widgets/Dialogue.xaml
@@ -196,12 +196,12 @@
             </StackPanel>
         </StackPanel>
 
-            <!-- MOD START - Remove early access text from dialogues -->
-        <!-- TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
+            <!-- MOD START - Remove early access text from dialogues
+        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
             <Run Text="{Binding Source='h8be1f0ddgdfa7g4812ga2b5g04854b2a1a65', Converter={StaticResource TranslatedStringConverter}, ConverterParameter='ToUpper'}"/>
             <Run Text=" - "/>
             <Run Text="{Binding DataContext.Data.VersionString, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"/>
-        </TextBlock -->
-            <!-- MOD END -->
+        </TextBlock>
+            MOD END -->
     </Grid>
 </ls:UIWidget>
